--- a/agenda/templates/modelHeader.html
+++ b/agenda/templates/modelHeader.html
@@ -2,4 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Agenda</title>
+<div align='right'>
+    <a href="/logout">Logout</a>
+</div>
 <H1>Agenda</H1>
