--- a/agenda/templates/agenda.html
+++ b/agenda/templates/agenda.html
@@ -1,10 +1,12 @@
 {% extends 'modelPage.html' %}
 
 {% block content %}
+    
     <h2>Agendamentos</h2>
     <ul>
         {% for evento in eventos %}
             <li>{{evento.titulo}} - {{evento.getDataEvento}}</li>
         {% endfor %}
     </ul>
+    <a class="btn btn-primary" href="evento/" role="button">Novo evento</a>
 {% endblock %}
