--- a/agenda/templates/login.html
+++ b/agenda/templates/login.html
@@ -4,23 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <title>Agenda</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <form action="submit" method="POST">{% csrf_token %}
-        <div align='center'>
-            <label>Usuario</label>
-            <input type="text" name='username'>
-            <label>Senha</label>
-            <input type="password" name='password'>
-            <button type="submit">Entrar</button>
-        </div>
-    </form>
-    {% for message in messages %}
-        <div align='center'>
+    <div class="ml-auto">
+        <h1>Login</h1>
+        <form action="submit" method="POST">{% csrf_token %}
+            <div class="form-group row">
+                <label for="user" class="col-sm-1 col-form-label">Email</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" id="user" name="username">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="pass" class="col-sm-1 col-form-label">Senha</label>
+                <div class="col-sm-2">
+                    <input class="form-control" id= "pass" type="password" name='password'>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-outline-primary">Entrar</button>
+        </form>
+        {% for message in messages %}
             <strong>Erro! </strong>{{message}}
-        </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 </body>
 </html>
