Adicionando funções de alteração e exclusão de dados

--- a/agenda/templates/agenda.html
+++ b/agenda/templates/agenda.html
@@ -5,7 +5,10 @@
     <h2>Agendamentos</h2>
     <ul>
         {% for evento in eventos %}
-            <li>{{evento.titulo}} - {{evento.getDataEvento}}</li>
+            <li>{{evento.titulo}} - {{evento.getDataEvento}}
+                <a class="btn btn-success" href="evento/?id={{evento.id}}" role="button">Editar</a>
+                <a class="btn btn-danger" href="evento/delete/{{evento.id}}/" role="button">Deletar</a>
+            </li>
         {% endfor %}
     </ul>
     <a class="btn btn-primary" href="evento/" role="button">Novo evento</a>
